# ai_utils_ros

./: .gitignore  CMakeLists.txt  package.xml  setup.py
config/: example.yaml
launch/: ai_utils_ros.launch
scripts/: ai_utils_ros_node
src/ai_utils_ros/: __init__.py  detector_factory.py
